--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "client.js",
   "dependencies": {
     "express": "^4.16.4",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.11",
     "nodejs": "^0.0.0",
     "websocket": "^1.0.28",
     "ws": "^6.1.2"
