--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "ws": "^6.1.2"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2",
     "nodemon": "^1.18.10"
   },
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Matth",
   "license": "ISC"
