--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.4",
     "loadash": "^1.0.0",
     "lodash": "^4.17.11",
+    "node-schedule": "^1.3.2",
     "nodejs": "^0.0.0",
     "websocket": "^1.0.28",
     "ws": "^6.1.2"
